# machine-vm

./: .travis.yml  CODE_OF_CONDUCT.md  README.md  machine-vm.cabal  stack.yaml
src/: Main.hs
src/Machine/: ALU.hs  Chips.hs  Gates.hs  Memory.hs
test/: Test.hs
test/VMTest/Machine/: ALU.hs  Chips.hs  Gates.hs  Memory.hs
