name:                machine-vm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/machine-vm#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable machine-vm
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.5.10 && < 0.6
  other-modules:       Machine.Chips

Test-Suite test-machine-vm
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  default-language:    Haskell2010
  hs-source-dirs:      test,
                       src
  build-depends:       base >=4.7 && < 5,
                       HUnit
  other-modules:       Machine.Chips
                      ,VMTest.Machine.Chips
                      ,VMTest.Machine.ALU
